Impliment Product List page with dummy data

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Demo Shop</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body>
     <H1>Demo Shop</H1>
